# CovenantOS

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: Dockerfile  package.json  tsconfig.json
backend/scripts/: check-chain-wallet.cjs  seed-demo.cjs  sync-testnet-config.cjs
backend/src/: index.ts  server.ts
backend/src/agents/: covenant-agent.ts  document-agent.ts  treasury-agent.ts
backend/src/chain/: action-id-resolver.ts  bootstrap.ts  casper-sdk.ts  client.ts  config.ts  contracts.ts  facility-id.ts  index.ts  signer.ts  tx.ts  writer.ts
backend/src/db/: chain-events.ts  config.ts  index.ts  repositories.ts  schema.sql
backend/src/events/: bus.ts  wire.ts
backend/test/: adversarial-covenant.test.ts  chain-tx.test.ts  chain-writer.test.ts  chain.test.ts  covenant-agent.test.ts  document-agent.test.ts  indexer.test.ts  parse-document.test.ts  runtime-policy.test.ts  x402-gateway.test.ts  x402.test.ts
contracts/: Cargo.toml  Odra.toml  README.md  build.rs
contracts/resources/: casper-test-contracts.toml
contracts/src/: evidence_receipt.rs  facility_vault.rs  lib.rs  policy_guard.rs  types.rs
infra/: Caddyfile  covenantos.service  deploy.sh  docker-compose.prod.yml
mock-provider/: Dockerfile  package.json
mock-provider/src/: server.ts
provider/: Dockerfile  package.json
provider/src/: server.ts
shared/: package.json
shared/config/: testnet.json
shared/src/: index.ts
web/: Dockerfile  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
(+104 files in other folders)
